update menuController